# file-integrity

./: .gitignore
file integrity/: CMakeLists.txt  args_parser.cpp  args_parser.h  dispatcher.cpp  dispatcher.h  example.txt  file integrity.vcxproj  file integrity.vcxproj.filters  hasher.cpp  hasher.h  main.cpp
file integrity/x64/Debug/: file integrity.exe.recipe  file integrity.vcxproj.FileListAbsolute.txt  vc143.idb
file integrity/x64/Debug/file integrity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  file integrity.lastbuildstate  file integrity.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: example.txt  example2.txt  hashes.txt
x64/Debug/example_dir/: example2.txt
